# deepfake-voice-recognition

./: README.md  app.py  deepfake-voice-recognition.ipynb  pyproject.toml  server.py
models/: lstm_model.keras  lstm_scaler.joblib
notebooks/: deepfake-voice-recognition.ipynb
